--- a/sample-app/src/main/webapp/index.html
+++ b/sample-app/src/main/webapp/index.html
@@ -8,39 +8,58 @@
     <link rel="stylesheet" href="css/tabs.css">
     <link rel="stylesheet" href="libraries/bootstrap-3.3.6-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
+    <title>Pusher Test</title>
+    <script src="https://js.pusher.com/3.0/pusher.min.js"></script>
+    <script>
+        var pusher = new Pusher('6ddefb4dd81db7c72a0d', {
+            encrypted: true
+        });
+
+        var channel = pusher.subscribe('test_channel');
+        channel.bind('my_event', function(data) {
+            for (var key in data) {
+                var item = data[key];
+                for (var key2 in item) {
+                }
+            }
+        });
+    </script>
 </head>
 <body>
 <button onclick="window.open('http://www.globes.co.il/portal/optionlist/?TypeID=15&TabID=3');">
     <code>window.open(url)</code>
 </button>
+<h1>
+
+</h1>
 <div ng-controller="AppCtrl" ng-cloak="" class="tabsdemoStaticTabs" ng-app="MyApp">
     <md-content class="md-padding">
         <md-tabs class="md-accent" md-selected="data.selectedIndex" md-align-tabs="{{data.bottom ? 'bottom' : 'top'}}">
             <md-tab id="tab1">
                 <md-tab-label>Stocks</md-tab-label>
-                    <md-tab-body>
-                        <div ng-controller="stockController" ng-cloak>
-                            <button ng-click="getStockDataFromServer()">Fetch data from server</button>
-                            <button ng-click="getStockRangeDataFromServer()">Fetch data date from server</button>
-                            <md-content>
-                                <md-list>
-                                    <uib-accordion close-others="oneAtATime">
-                                        <uib-accordion-group is-open="status.open" ng-repeat="item in stocks">
-                                            <md-list-item class="md-line">
-                                                <div class="md-list-item-text" layout="column">
-                                                    <uib-accordion-heading>
-                                                        <p>{{item.assetName}} <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i></p>
-                                                        <p> amount:{{item.amount}} price:{{item.price}} </p>
-                                                        <p>  {{item.date}} {{item.time}}</p>
-                                                    </uib-accordion-heading>
-                                                    <p> {{item.contractNumber}} </p>
-                                                </div>
-                                            </md-list-item>
-                                        </uib-accordion-group>
-                                    </uib-accordion>
-                                </md-list>
-                            </md-content>
-                        </div>
+                <md-tab-body>
+                    <div ng-controller="stockController" ng-cloak>
+                        <button ng-click="getStockDataFromServer()">Fetch data from server</button>
+                        <button ng-click="getStockRangeDataFromServer()">Fetch data date from server</button>
+                        <md-content>
+                            <md-list>
+                                <uib-accordion close-others="oneAtATime">
+                                    <uib-accordion-group is-open="status.open" ng-repeat="item in stocks">
+                                        <md-list-item class="md-line">
+                                            <div class="md-list-item-text" layout="column">
+                                                <uib-accordion-heading>
+                                                    <p>{{item.assetName}} <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': status.open, 'glyphicon-chevron-right': !status.open}"></i></p>
+                                                    <p> amount:{{item.amount}} price:{{item.price}} </p>
+                                                    <p>  {{item.date}} {{item.time}}</p>
+                                                </uib-accordion-heading>
+                                                <p> {{item.contractNumber}} </p>
+                                            </div>
+                                        </md-list-item>
+                                    </uib-accordion-group>
+                                </uib-accordion>
+                            </md-list>
+                        </md-content>
+                    </div>
                 </md-tab-body>
             </md-tab>
             <md-tab id="tab2">
@@ -60,12 +79,15 @@
 
 <!-- Angular Material Library -->
 <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
-
+<!-- https://github.com/SheetJS/js-xlsx/blob/master/jszip.js -->
+<script src="/path/to/jszip.js"></script>
+<!-- https://github.com/SheetJS/js-xlsx/blob/master/xlsx.js -->
+<script src="/path/to/xlsx.js"></script>
 <script src="libraries/jquery-1.12.0.min.js"></script>
 <script src="libraries/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
 <script src="libraries/ui-bootstrap-tpls-1.1.2.min.js"></script>
 <script type="text/javascript" src="js/tabs.js"></script>
 <script src="js/controllers/stockController.js"></script>
 
-    </body>
+</body>
 </html>
