--- a/sample-app/src/main/webapp/index.html
+++ b/sample-app/src/main/webapp/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>ADTM</title>
+
     <!-- Angular Material style sheet -->
     <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.css">
     <link rel="stylesheet" href="css/tabs.css">
     <link rel="stylesheet" href="libraries/bootstrap-3.3.6-dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
     <link rel="styleSheet" href="css/ui-grid.min.css"/>
-    <link rel="styleSheet" href="tabs/market/market.css"/>
+    <link rel="styleSheet" href="js/tabs/market/market.css"/>
 
     <script src="http://ui-grid.info/docs/grunt-scripts/csv.js"></script>
     <script src="http://ui-grid.info/docs/grunt-scripts/pdfmake.js"></script>
@@ -17,8 +18,9 @@
 	<script src="https://js.pusher.com/3.0/pusher.min.js"></script>
 
 </head>
+
 <body>
-    <div ng-controller="AppCtrl" ng-cloak="" class="tabsdemoStaticTabs" ng-app="MyApp">
+    <div ng-controller="Date" ng-cloak="" class="tabsdemoStaticTabs" ng-app="MyApp">
         <md-content class="md-padding">
             <md-tabs class="md-accent" md-selected="data.selectedIndex" md-align-tabs="{{data.bottom ? 'bottom' : 'top'}}">
                 <md-tab id="tab1">
@@ -65,7 +67,7 @@
                 <md-tab id="tab4">
                     <md-tab-label>  בורסת ת"א - אופציות ת"א 25</md-tab-label>
                     <md-tab-body>
-                        <div ng-controller="MainCtrl">
+                        <div ng-controller="LiveData">
 
                             <button id='toggleFiltering' ng-click="toggleFiltering()" class="btn btn-success">Toggle Filtering</button>
                             <div id="grid2" ui-grid="gridOptions" class="grid" dir="rtl" ui-grid-pinning ui-grid-resize-columns></div>
@@ -78,7 +80,7 @@
                 <md-tab id="tab5" >
                     <md-tab-label> live data</md-tab-label>
                     <md-tab-body>
-                        <div ng-controller="MainCtrl">
+                        <div ng-controller="LiveData">
                             <li ng-repeat="data in liveData">
                                 {{ data }}
                             </li>
@@ -113,9 +115,15 @@
     <script src="libraries/bootstrap-3.3.6-dist/js/bootstrap.min.js"></script>
     <script src="libraries/ui-bootstrap-tpls-1.1.2.min.js"></script>
     <script src="libraries/ui-grid/ui-grid.min.js"></script>
+
+
     <script src="js/LoginScript.js"></script>
     <script type="text/javascript" src="js/tabs.js"></script>
-    <script type="text/javascript" src="tabs/market/market.js"></script>
+    <script type="text/javascript" src="js/market/market.js"></script>
+    <script type="text/javascript" src="js/Accordion.js"></script>
+    <script type="text/javascript" src="js/date.js"></script>
+    <script type="text/javascript" src="js/LivaData.js"></script>
+    <script type="text/javascript" src="js/controllers/stockController.js"></script>
 
     </body>
 </html>
