improve excell reader servlet + small fixes in strategies + rename to live data

--- a/sample-app/src/main/webapp/index.html
+++ b/sample-app/src/main/webapp/index.html
@@ -122,7 +122,7 @@
     <script type="text/javascript" src="js/market/market.js"></script>
     <script type="text/javascript" src="js/Accordion.js"></script>
     <script type="text/javascript" src="js/date.js"></script>
-    <script type="text/javascript" src="js/LivaData.js"></script>
+    <script type="text/javascript" src="js/LiveData.js"></script>
     <script type="text/javascript" src="js/controllers/stockController.js"></script>
 
     </body>
