--- a/sample-app/src/main/webapp/index.html
+++ b/sample-app/src/main/webapp/index.html
@@ -22,7 +22,7 @@
 <body>
     <div ng-controller="Date" ng-cloak="" class="tabsdemoStaticTabs" ng-app="MyApp">
         <md-content class="md-padding">
-            <md-tabs class="md-accent" md-selected="data.selectedIndex" md-align-tabs="{{data.bottom ? 'bottom' : 'top'}}">
+                <md-tabs class="md-accent" md-selected="data.selectedIndex" md-align-tabs="{{data.bottom ? 'bottom' : 'top'}}">
                 <md-tab id="tab1">
                     <md-tab-label>Stocks</md-tab-label>
                         <md-tab-body>
@@ -63,7 +63,6 @@
                         </div>
                     </md-tab-body>
                 </md-tab>
-
                 <md-tab id="tab4">
                     <md-tab-label>  בורסת ת"א - אופציות ת"א 25</md-tab-label>
                     <md-tab-body>
@@ -75,8 +74,6 @@
                         </div>
                     </md-tab-body>
                 </md-tab>
-
-
                 <md-tab id="tab5" >
                     <md-tab-label> live data</md-tab-label>
                     <md-tab-body>
@@ -87,7 +84,6 @@
                         </div>
                     </md-tab-body>
                 </md-tab>
-
                 <md-tab id="tab6">
                     <md-tab-label> Login </md-tab-label>
                     <md-tab-body>
@@ -119,7 +115,7 @@
 
     <script src="js/LoginScript.js"></script>
     <script type="text/javascript" src="js/tabs.js"></script>
-    <script type="text/javascript" src="js/market/market.js"></script>
+    <script type="text/javascript" src="js/tabs/market/market.js"></script>
     <script type="text/javascript" src="js/Accordion.js"></script>
     <script type="text/javascript" src="js/date.js"></script>
     <script type="text/javascript" src="js/LiveData.js"></script>
