--- a/sample-app/src/main/webapp/index.html
+++ b/sample-app/src/main/webapp/index.html
@@ -23,6 +23,7 @@
     <div ng-controller="Date" ng-cloak="" class="tabsdemoStaticTabs" ng-app="MyApp">
         <md-content class="md-padding">
                 <md-tabs class="md-accent" md-selected="data.selectedIndex" md-align-tabs="{{data.bottom ? 'bottom' : 'top'}}">
+                    <!--
                 <md-tab id="tab1">
                     <md-tab-label>Stocks</md-tab-label>
                         <md-tab-body>
@@ -63,17 +64,19 @@
                         </div>
                     </md-tab-body>
                 </md-tab>
+                -->
                 <md-tab id="tab4">
-                    <md-tab-label>  בורסת ת"א - אופציות ת"א 25</md-tab-label>
+                    <md-tab-label> Live Options </md-tab-label>
                     <md-tab-body>
                         <div ng-controller="LiveData">
 
                             <button id='toggleFiltering' ng-click="toggleFiltering()" class="btn btn-success">Toggle Filtering</button>
-                            <div id="grid2" ui-grid="gridOptions" class="grid" dir="rtl" ui-grid-pinning ui-grid-resize-columns></div>
+                            <div id="grid2" ui-grid="gridOptions" class="grid"  ui-grid-pinning ui-grid-resize-columns></div>
 
                         </div>
                     </md-tab-body>
                 </md-tab>
+                    <!--
                 <md-tab id="tab5" >
                     <md-tab-label> live data</md-tab-label>
                     <md-tab-body>
@@ -94,6 +97,7 @@
                         <img src='' id='imgHolder'/>
                     </md-tab-body>
                 </md-tab>
+                -->
             </md-tabs>
         </md-content>
     </div>
