--- a/sample-app/src/main/webapp/index.html
+++ b/sample-app/src/main/webapp/index.html
@@ -107,6 +107,7 @@
 <script type="text/javascript" src="js/liveDataKendo.js"></script>
 <script type="text/javascript" src="js/dataScience.js"></script>
 <script type="text/javascript" src="js/liveDataDirective.js"></script>
+<script type="text/javascript" src="js/purchase.js"></script>
 
 <script>
     window.fbAsyncInit = function() {
