--- a/sample-app/src/main/webapp/index.html
+++ b/sample-app/src/main/webapp/index.html
@@ -35,7 +35,7 @@
 <body>
 <div ng-controller="NavbarCtrl" class="navbar navbar-default navbar-static-top">
     <div class="navbar-header">
-        <a class="navbar-brand" href="/"><i class="ion-ios7-pulse-strong"></i> Adtm</a>
+        <a class="navbar-brand" href="/"><i class="ion-ios7-pulse-strong"></i> <img src="logo.jpg" width="105" height="78"></a>
     </div>
     <ul class="nav navbar-nav">
         <li><a href="/#/">Home</a></li>
@@ -99,6 +99,7 @@
 <script src="https://d3js.org/d3.v3.min.js" charset="utf-8"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/line-chart/2.0.26/LineChart.min.js"></script>
 <script type="text/javascript" src="libraries/require.js"></script>
+<script type="text/javascript" src="https://code.highcharts.com/highcharts.js"></script>
 
 <script type="text/javascript" src="js/Accordion.js"></script>
 <script type="text/javascript" src="js/date.js"></script>
@@ -108,6 +109,7 @@
 <script type="text/javascript" src="js/dataScience.js"></script>
 <script type="text/javascript" src="js/liveDataDirective.js"></script>
 <script type="text/javascript" src="js/purchase.js"></script>
+<script type="text/javascript" src="js/timeChart.js"></script>
 
 <script>
     window.fbAsyncInit = function() {
